fixed spacing in layout

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -546,12 +546,7 @@ button {
 }
 
 /* Layout Styles */
-.lola-main {
-  width: 100%;
-}
-
 .lola-layout {
-  width: 100%;
   max-width: 500px;
   display: flex;
   flex-direction: column;
@@ -568,7 +563,6 @@ button {
 }
 
 .lola-layout--container {
-  width: 100%;
   max-width: 350px;
   margin-left: auto;
   margin-right: auto;
